Fixed new file bug

--- a/obsidian.css
+++ b/obsidian.css
@@ -1,13 +1,73 @@
 
-
 .theme-dark {
-    --text-selection:#5c73f2; 
-    --interactive-accent:    #5c73f2     ;
+    --background-primary: #202020;
+    --background-primary-alt: #1a1a1a;
+    --background-secondary: #161616;
+    --background-secondary-alt: #080808;
+    --background-accent: #000;
+    --background-modifier-border: #333;
+    --background-modifier-form-field: rgba(0, 0, 0, 0.3);
+    --background-modifier-form-field-highlighted: rgba(0, 0, 0, 0.22);
+    --background-modifier-box-shadow: rgba(0, 0, 0, 0.3);
+    --background-modifier-success: #197300;
+    --background-modifier-error: #3d0000;
+    --background-modifier-error-rgb: 61, 0, 0;
+    --background-modifier-error-hover: #470000;
+    --background-modifier-cover: rgba(0, 0, 0, 0.6);
+    --text-accent: #5c73f2;
+    --text-accent-hover: #5c73f2;
+    --text-normal: #dcddde;
+    --text-muted: #888;
+    --text-faint: #555;
+    --text-error: #ff3333;
+    --text-error-hover: #990000;
+    --text-highlight-bg: #5cd6f296;
+    --text-selection: rgba(0, 122, 255, 0.2);
+    --text-on-accent: #dcddde;
+    --interactive-normal: #2a2a2a;
+    --interactive-hover: #303030;
+    --interactive-accent: #5c73f2;
+    --interactive-accent-rgb: 72, 54, 153;
+    --interactive-accent-hover: #5c73f2;
+    --scrollbar-active-thumb-bg: rgba(255, 255, 255, 0.2);
+    --scrollbar-bg: rgba(255, 255, 255, 0.05);
+    --scrollbar-thumb-bg: rgba(255, 255, 255, 0.1);
 }
 
+
 .theme-light {
-    --text-selection:#5c73f2;
-    --interactive-accent:    #5c73f2     ;
+    --background-primary: #ffffff;
+    --background-primary-alt: #f5f6f8;
+    --background-secondary: #f2f3f5;
+    --background-secondary-alt: #e3e5e8;
+    --background-accent: #5c73f2;
+    --background-modifier-border: #ddd;
+    --background-modifier-form-field: #fff;
+    --background-modifier-form-field-highlighted: #fff;
+    --background-modifier-box-shadow: rgba(0, 0, 0, 0.1);
+    --background-modifier-success: #A4E7C3;
+    --background-modifier-error: #e68787;
+    --background-modifier-error-rgb: 230, 135, 135;
+    --background-modifier-error-hover: #FF9494;
+    --background-modifier-cover: rgba(0, 0, 0, 0.8);
+    --text-accent: #5c73f2;
+    --text-accent-hover: #5c73f2;
+    --text-normal: #2e3338;
+    --text-muted: #888888;
+    --text-faint: #999999;
+    --text-error: #800000;
+    --text-error-hover: #990000;
+    --text-highlight-bg: #5cd6f296;
+    --text-selection: rgba(0, 122, 255, 0.15);
+    --text-on-accent: #f2f2f2;
+    --interactive-normal: #f2f3f5;
+    --interactive-hover: #e9e9e9;
+    --interactive-accent: #5c73f2;
+    --interactive-accent-rgb: 123, 108, 217;
+    --interactive-accent-hover: #5c73f2;
+    --scrollbar-active-thumb-bg: rgba(0, 0, 0, 0.2);
+    --scrollbar-bg: rgba(0, 0, 0, 0.05);
+    --scrollbar-thumb-bg: rgba(0, 0, 0, 0.1);
 }
 
 ::selection {
